Update Touros Exercise 1 Source Code-checkpoint.ipynb, Touros Exercise 1 Source Code.ipynb, and 13 more files...

--- a/Exercise 1/Touros Exercise 1 Source Code.ipynb
+++ b/Exercise 1/Touros Exercise 1 Source Code.ipynb
@@ -3684,13 +3684,7 @@
       "50000/50000 [==============================] - 12s 250us/step - loss: 1.0330 - accuracy: 0.3472 - val_loss: 1.0309 - val_accuracy: 0.3574\n",
       "Epoch 44/60\n",
       "50000/50000 [==============================] - 12s 246us/step - loss: 1.0332 - accuracy: 0.3469 - val_loss: 1.0338 - val_accuracy: 0.3461\n",
-      "Epoch 45/60\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 45/60\n",
       "50000/50000 [==============================] - 12s 248us/step - loss: 1.0336 - accuracy: 0.3452 - val_loss: 1.0326 - val_accuracy: 0.3487\n",
       "Epoch 46/60\n",
       "50000/50000 [==============================] - 13s 250us/step - loss: 1.0325 - accuracy: 0.3497 - val_loss: 1.0350 - val_accuracy: 0.3371\n",
@@ -4348,7 +4342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
