--- a/Exercise 2/Touros - Exercise 2 (Chatbot).ipynb
+++ b/Exercise 2/Touros - Exercise 2 (Chatbot).ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -72,6 +80,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns=['char1', 'char2', 'mov', 'lines']\n",
+    "convs = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_conversations.txt',\n",
+    "                    sep=' \\+\\+\\+\\$\\+\\+\\+ ', \n",
+    "                    engine='python', \n",
+    "                    header=None)\n",
+    "convs.columns=columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convs = convs['lines']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = ['lineID', 'charID', 'movieID', 'charName', 'line']\n",
+    "lines = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_lines.txt',\n",
+    "                    sep=' \\+\\+\\+\\$\\+\\+\\+ ', \n",
+    "                    engine='python', \n",
+    "                    header=None)\n",
+    "lines.columns=columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = lines[['lineID','line']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -94,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
