conversations pickle creation

--- a/Exercise 2/Touros - Exercise 2 (Chatbot).ipynb
+++ b/Exercise 2/Touros - Exercise 2 (Chatbot).ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -23,14 +15,15 @@
     "import keras\n",
     "import wget\n",
     "import zipfile\n",
-    "import csv\n",
     "import os, fnmatch\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pickle as pkl\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% [..........................................................................] 9916637 / 9916637"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_filename = fetch_data('https://s3.amazonaws.com/pytorch-tutorial-assets/cornell_movie_dialogs_corpus.zip')"
    ]
@@ -80,48 +65,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns=['char1', 'char2', 'mov', 'lines']\n",
-    "convs = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_conversations.txt',\n",
-    "                    sep=' \\+\\+\\+\\$\\+\\+\\+ ', \n",
-    "                    engine='python', \n",
-    "                    header=None)\n",
-    "convs.columns=columns"
+    "movie_lines_features = [\"LineID\", \"Character\", \"Movie\", \"Name\", \"Line\"]\n",
+    "movie_lines = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_lines.txt', \n",
+    "                          engine = \"python\", \n",
+    "                          index_col = False,\n",
+    "                          sep=' \\+\\+\\+\\$\\+\\+\\+ ',\n",
+    "                          names = movie_lines_features)\n",
+    "\n",
+    "# Using only the required columns, namely, \"LineID\" and \"Line\"\n",
+    "movie_lines = movie_lines[[\"LineID\", \"Line\"]]\n",
+    "\n",
+    "# Strip the space from \"LineID\" for further usage and change the datatype of \"Line\"\n",
+    "movie_lines[\"LineID\"] = movie_lines[\"LineID\"].apply(str.strip)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LineID</th>\n",
+       "      <th>Line</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>L1045</td>\n",
+       "      <td>They do not!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>L1044</td>\n",
+       "      <td>They do to!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>L985</td>\n",
+       "      <td>I hope so.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>L984</td>\n",
+       "      <td>She okay?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>L925</td>\n",
+       "      <td>Let's go.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  LineID          Line\n",
+       "0  L1045  They do not!\n",
+       "1  L1044   They do to!\n",
+       "2   L985    I hope so.\n",
+       "3   L984     She okay?\n",
+       "4   L925     Let's go."
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "convs = convs['lines']"
+    "movie_lines.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = ['lineID', 'charID', 'movieID', 'charName', 'line']\n",
-    "lines = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_lines.txt',\n",
-    "                    sep=' \\+\\+\\+\\$\\+\\+\\+ ', \n",
-    "                    engine='python', \n",
-    "                    header=None)\n",
-    "lines.columns=columns"
+    "movie_conversations_features = [\"Character1\", \"Character2\", \"Movie\", \"Conversation\"]\n",
+    "movie_conversations = pd.read_csv('.\\\\data\\\\cornell movie-dialogs corpus\\\\movie_conversations.txt',\n",
+    "                                  sep = \"\\+\\+\\+\\$\\+\\+\\+\", \n",
+    "                                  engine = \"python\", \n",
+    "                                  index_col = False, \n",
+    "                                  names = movie_conversations_features)\n",
+    "\n",
+    "# Again using the required feature, \"Conversation\"\n",
+    "movie_conversations = movie_conversations[\"Conversation\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     ['L194', 'L195', 'L196', 'L197']\n",
+       "1                     ['L198', 'L199']\n",
+       "2     ['L200', 'L201', 'L202', 'L203']\n",
+       "3             ['L204', 'L205', 'L206']\n",
+       "4                     ['L207', 'L208']\n",
+       "Name: Conversation, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_conversations.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = lines[['lineID','line']]"
+    "#conversation = [[str(list(movie_lines.loc[movie_lines[\"LineID\"] == u.strip().strip(\"'\"), \"Line\"])[0]).strip() for u in c.strip().strip('[').strip(']').split(',')] for c in movie_conversations]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with open(\"conversations.pkl\", \"wb\") as handle:\n",
+    "    #pkl.dump(conversation, handle)"
    ]
   },
   {
@@ -129,7 +227,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"conversatons.pkl\", \"rb\") as handle:\n",
+    "    conversation = pkl.load(handle)"
+   ]
   }
  ],
  "metadata": {
@@ -148,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
