Update ADAM_LSTM_D_s2s_model_keras.json, Ex2_Touros_Report.docx, and 18 more files...

--- a/Exercise 2/Keras attempt 4 (Xtra Large).ipynb
+++ b/Exercise 2/Keras attempt 4 (Xtra Large).ipynb
@@ -317,12 +317,7 @@
     "padded_answers = preprocessing.sequence.pad_sequences( tokenized_answers , maxlen=maxlen_answers , padding='post' )\n",
     "onehot_answers = utils.to_categorical( padded_answers , VOCAB_SIZE )\n",
     "decoder_output_data = np.array( onehot_answers )\n",
-    "print( decoder_output_data.shape )\n",
-    "\n",
-    "# Saving all the arrays to storage\n",
-    "#np.save( 'enc_in_data.npy' , encoder_input_data )\n",
-    "#np.save( 'dec_in_data.npy' , decoder_input_data )\n",
-    "#np.save( 'dec_tar_data.npy' , decoder_output_data )"
+    "print( decoder_output_data.shape )\n"
    ]
   },
   {
